[tool.commitizen]
version = "0.0.0"
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/pit/viper/__version__.py",
]
changelog_file = "docs/CHANGELOG.md"


[tool.poetry]
name = "pit-viper"
version = "0.0.0"
description = "Pit-Viper is a Python package that offers configuration management capabilities like the Viper package in Golang."
authors = ["Leo Schleier <43878374+leoschleier@users.noreply.github.com>"]
license = "MIT"
keywords = ["pit-viper"]
readme = "docs/README.md"
homepage = "https://github.com/leoschleier/pit-viper"
# See: https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "pit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "ANN102"]  # Type annotations for 'self' and 'cls'
fixable = ["ALL"]
fix = false
line-length = 79
target-version = "py311"

[tool.ruff.pycodestyle]
max-doc-length = 72

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E401"]  # Unused import
"tests/*" = ["S101"]  # Use of assert detected


[tool.black]
line-length = 79


[tool.pytest.ini_options]
pythonpath = ["src"]