[tool.commitizen]
version = "0.1.0"
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/pit/viper/__version__.py",
]
changelog_file = "docs/CHANGELOG.md"


[tool.poetry]
name = "pit-viper"
version = "0.1.0"
description = "Pit-Viper is a Python package that offers configuration management capabilities like the Viper package in Golang."
authors = ["Leo Schleier <43878374+leoschleier@users.noreply.github.com>"]
license = "MIT"
keywords = ["pit-viper"]
readme = "docs/README.md"
homepage = "https://github.com/leoschleier/pit-viper"
# See: https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "pit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["src", "tests"]
pythonVersion = "3.11"

[tool.ruff]
select = ["ALL"]
fixable = ["ALL"]
fix = true
line-length = 79
target-version = "py311"

[tool.ruff.pycodestyle]
max-doc-length = 72

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E401"]  # Unused import
"tests/*" = ["S101"]  # Use of assert detected


[tool.pytest.ini_options]
pythonpath = ["src"]
