[tool.commitizen]
version = "1.1.0"
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/pit/viper/__version__.py",
]
changelog_file = "docs/CHANGELOG.md"


[tool.poetry]
name = "pit-viper"
version = "1.1.0"
description = "Pit-Viper is a Python package that offers configuration management capabilities like the Viper package in Golang."
authors = ["Leo Schleier <43878374+leoschleier@users.noreply.github.com>"]
license = "MIT"
keywords = ["pit-viper"]
readme = "docs/README.md"
homepage = "https://github.com/leoschleier/pit-viper"
# See: https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "pit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.3"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
pyright = "^1.1.344"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[[tool.mypy.overrides]]
module = "py"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["src", "tests"]
ignore = ["tests/conftest.py"]
pythonVersion = "3.11"

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN401",  # Use of typing.Any  
    "COM812",  # Missing trailing comma (formatter)
    "ISC001",  # Single line implicit string concatenation (formatter)
]
fixable = ["ALL"]
fix = true
line-length = 79
target-version = "py311"

[tool.ruff.pycodestyle]
max-doc-length = 72

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E401"]  # Unused import
"tests/*" = ["S101"]  # Use of assert detected
"tests/conftest.py" = ["SLF001"]

[tool.pytest.ini_options]
pythonpath = ["src"]
